# egui_logger

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: benchmark.rs  hello.rs  multi_log.rs  puffin.rs
src/: lib.rs  ui.rs
