[package]
name = "egui_logger"
version = "0.9.0"
edition = "2021"
authors = ["Jacob <RegenJacob@gmx.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RegenJacob/egui_logger"
description = "log implementation for egui"
categories = ["gui", "game-development", "development-tools::debugging"]
include = ["src/*.rs", "Cargo.toml", "LICENSE"]

[features]
puffin = ["dep:puffin"]

[dependencies]
log = "0.4"
egui = "0.33"
regex = "1.11"
puffin = { version = "0.19",  optional = true }

[dev-dependencies]
eframe = "0.33"
multi_log = "0.1"
env_logger = "0.11"
puffin_egui = { version = "0.29.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "wasmbind"] }

[patch.crates-io]
# It seems that puffin and puffin_egui are really outdated
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin.git", rev = "refs/pull/244/head" }
