[package]
name = "egui_logger"
version = "0.9.0"
edition = "2021"
authors = ["Jacob <RegenJacob@gmx.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RegenJacob/egui_logger"
description = "log implementation for egui"
categories = ["gui", "game-development", "development-tools::debugging"]
include = ["src/*.rs", "Cargo.toml", "LICENSE"]

[features]
#puffin = ["dep:puffin"]
#profiling = ["dep:profiling"]

[dependencies]
log = "0.4"
egui = "0.33"
regex = "1.11"
profiling = "1.0"
#profiling = { version = "1.0", features = ["profile-with-puffin"]}

[dev-dependencies]
eframe = "0.33"
multi_log = "0.1"
env_logger = "0.11"
puffin_egui = { version = "0.29.0" }
profiling = { version = "1.0", features = ["profile-with-tracy"]}
puffin = "0.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "wasmbind"] }

[patch.crates-io]
# It seems that puffin and puffin_egui are really outdated
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin.git", rev = "refs/pull/267/head" }
